--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.8)
 
 
-project(CPlusPlusBestC LANGUAGES CXX)
+project(CPlusPlusBestC
+	LANGUAGES CXX)
+	
+	
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
-
-add_executable(main main.cpp)
+add_executable( main main.cpp CorrectChecker.cpp)
