--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ project(CPlusPlusBestC
 	
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
-add_executable( main main.cpp CorrectChecker.cpp)
+add_executable(main main.cpp )
